# IRIS

./: .editorconfig  .gitattributes  .gitignore  CONTINUATION_PROMPTS.md  Cargo.toml  LICENSE  README.md  book-template.typst  build.rs  iris.toml.example  pandoc-template.typst  patch_module.py  patch_parse.py
.claude/: settings.json  settings.local.json
examples/: algorithms.iris  autodiff.iris  calculator.iris  closures.iris  closures_functional.iris  concurrency.iris  data_structures.iris  enums.iris  error_handling.iris  factorial.iris  fibonacci.iris  fizzbuzz.iris  game_of_life.iris  generics.iris  hello.iris  hello_world.iris  math_utils.iris  matrix_ops.iris  neural_net.iris  options_results.iris  pattern_matching.iris  recursion.iris  sorting.iris  statistics.iris  string_processing.iris  strings.iris  structs.iris  test_if_noelse.iris  type_system.iris
installer/: README.md  build_installer.ps1  install.ps1  iris-lang-0.1.0.vsix  iris.iss  uninstall.ps1
src/: cli.rs  compiler.rs  dap.rs  debugger.rs  diagnostics.rs  error.rs  lib.rs  lsp.rs  main.rs  repl.rs
stdlib/: file.iris  io.iris
tests/: binary_build.rs  graph_lower.rs  ir_construction.rs  model_parse.rs  parse_lower.rs  pass_pipeline.rs  phase10.rs  phase100.rs  phase101.rs  phase102.rs  phase103.rs  phase11.rs  phase12.rs  phase13.rs  phase14.rs  phase15.rs  phase16.rs  phase17.rs  phase18.rs  phase19.rs  phase21.rs  phase22.rs  phase23.rs  phase24.rs  phase25.rs  phase26.rs  phase27.rs  phase28.rs  phase29.rs  phase30.rs  phase31.rs  phase32.rs  phase33.rs  phase34.rs  phase35.rs  phase36.rs  (+69 more)
(+80 files in other folders)
